# ana-lights

./: .bandit  .flake8  .gitignore  .pydocstyle  .pylintrc  Makefile  README.md  avi_to_npy.py  hej.py  laptop.py  laptop_client.py  laptop_client_movie.py  laptop_client_stream.py  mapping.json  mypy.ini  npy_to_color.py  position.json  pyproject.toml  requirements.txt  rpi_server2.py  rpi_server2_multithread.py  rpi_server_movie.py  rpi_server_movie1.py  rpi_server_movie2.py  rpi_server_movie3.py  server.py  stream_positions.json  test.py  test2.py  zero_laptop_client_movie.py  zero_laptop_client_stream.py  zero_server_movie.py  zero_server_stream.py
after_effects/: lights.aep
after_effects/Adobe After Effects Auto-Save/: lights auto-save 1.aep  lights auto-save 3.aep  lights auto-save 4.aep
after_effects/footage/starlight light files/magic/: Field3Side.mov  Field4Front.mov  Field4Side.mov  Field5Front.mov  Field5Side.mov  Hit5Side.mov  Hit5front.mov  Hit8Side.mov
after_effects/lights_AME/: tmpAEtoAMEProject-Simulation.aep
ana_lights/: avi_to_json.py  color.py  convert_video.py  enums.py
ana_lights/client/: client.py  commands.py  global_vars.py  raspberry_pies.py  stream.py
ana_lights/rpi_ws281x/python/examples/: ana_lights.py  server.py  strandtest2.py  test2.py
ana_lights/server/: led_strip.py  server.py
ana_lights/server/threads/: command.py  global_vars.py  globals.py  lights.py  stream.py  time.py
lights/: ana_ending.npy  ana_ending_color.pkl
mapping/: ip_positions.json  pi_ips.json  pi_position.json  stream_window.json
